Closed Bug 1440269 Opened 6 years ago Closed 6 years ago

Preloaded JS modules may not work with the debugger

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

There's a problem with the changes in bug 1342416 to preload modules: the DOM script element is associated with the module's JSScript after the debugger's onNewScript hook is triggered.  This hook accesses the script source's element property, so this is broken.
Priority: -- → P2
This patch adds the ability to hide scripts from the debugger by setting a flag in the compile options until JS::ExposeScriptToDebugger() called, so that we don't run the debugger's onNewScript hook until the DOM element information has been initialised.  This is then used by the scriptloader for module scripts.
Attachment #8955128 - Flags: review?(nicolas.b.pierron)
Attachment #8955128 - Flags: review?(nicolas.b.pierron) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e5984797ef15
Defer calling debugger onNewScript hook for preloaded modules r=nbp
https://hg.mozilla.org/mozilla-central/rev/e5984797ef15
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: