Bug 1440269 - Defer calling debugger onNewScript hook for preloaded modules r=nbp